FIX: Remove extra margin arround dashboard

--- a/sass/web.site/modules/centerpage/_dashboard.sass
+++ b/sass/web.site/modules/centerpage/_dashboard.sass
@@ -1,5 +1,6 @@
 .dashboard
 	border-bottom: 2px solid $zon-alto
+	margin: 0 (-$page-padding)
 
 	&__upper
 		background-color: $trout
